--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" type="text/css" href="./css/invert-colors.css" />
     <link rel="stylesheet" type="text/css" href="../node_modules/loading-layer/dist/loading-layer.css" />
     <link rel="stylesheet" type="text/css" href="../node_modules/flying-canvas/dist/flying-canvas.min.css">
-
 </head>
 
 <body class="my-body">
@@ -106,6 +105,7 @@
     <script src="../node_modules/easter-eggs/dist/easter-eggs.js"></script>
     <script src="../node_modules/loading-layer/dist/loading-layer.js"></script>
     <script src="../node_modules/purple-console/dist/purple-console.js"></script>
+    <script src="../node_modules/flying-canvas/dist/flying-canvas.min.js"></script>
     <!-- Scripts -->
 
     <script>
@@ -166,20 +166,12 @@
         // Easter eggs
 
         EasterEggs.show();
-
         EasterEggs.addSequence(null,[51,50,49],function(){
             console.log("MATCH!!! 3,2,1");
+            changeColor();
         })
 
-    </script>
-
-
-
-
-    <script src="../node_modules/flying-canvas/dist/flying-canvas.min.js"></script>
-
-    <script>
-        //flyingCanvas.show();
+        flyingCanvas.show();
         flyingCanvas.start({
             width: 100,
             height: 200,
