--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
             changeColor();
         })
 
-        flyingCanvas.show();
+        //flyingCanvas.show();
         flyingCanvas.start({
             width: 100,
             height: 200,
