--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,30 @@
     <link rel="stylesheet" type="text/css" href="../node_modules/flying-canvas/dist/flying-canvas.min.css">
     <!-- endbuild -->
 
+    <style>
+
+        .flying-canvas{
+            display: none !important;
+            visibility: hidden;
+        }
+
+        #ajsrConsole{
+            display: none !important;
+            visibility: hidden;
+        }
+
+        #ee-history{
+            display: none !important;
+            visibility: hidden;
+        }
+
+        #ee-key{
+            display: none !important;
+            visibility: hidden;
+        }
+            
+    </style>
+
 </head>
 
 <body class="my-body">
