Handle mandatory key Back / Return on VIDAA platform

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,8 @@
     <script src="../node_modules/purple-console/dist/purple-console.js"></script>
     <script src="../node_modules/flying-canvas/dist/flying-canvas.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/keyhandler.js"></script>
+    <script src="./js/platformInfo.js"></script>
     <!-- endbuild -->
 
 </body>
